0.4.16/_sources/gallery/nD_multiscale_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/nD_multiscale_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_nD_multiscale_image.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_nD_multiscale_image.py:


nD multiscale image
===================

Displays an nD multiscale image

.. GENERATED FROM PYTHON SOURCE LINES 7-27



.. image-sg:: /gallery/images/sphx_glr_nD_multiscale_image_001.png
   :alt: nD multiscale image
   :srcset: /gallery/images/sphx_glr_nD_multiscale_image_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    base shape (8, 1536, 1536)
    /Users/mwebermendonca/napari/examples/nD_multiscale_image.py:18: FutureWarning: `multichannel` is a deprecated argument name for `pyramid_gaussian`. It will be removed in version 1.0. Please use `channel_axis` instead.
      pyramid_gaussian(base, downscale=2, max_layer=2, multichannel=False)
    multiscale level shapes:  [(8, 1536, 1536), (4, 768, 768), (2, 384, 384)]






|

.. code-block:: default


    from skimage.transform import pyramid_gaussian
    import napari
    import numpy as np


    # create multiscale from random data
    base = np.random.random((1536, 1536))
    base = np.array([base * (8 - i) / 8 for i in range(8)])
    print('base shape', base.shape)
    multiscale = list(
        pyramid_gaussian(base, downscale=2, max_layer=2, multichannel=False)
    )
    print('multiscale level shapes: ', [p.shape for p in multiscale])

    # add image multiscale
    viewer = napari.view_image(multiscale, contrast_limits=[0, 1], multiscale=True)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_nD_multiscale_image.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: nD_multiscale_image.py <nD_multiscale_image.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: nD_multiscale_image.ipynb <nD_multiscale_image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
